# PanGBank-cli

./: .readthedocs.yaml  CHANGELOG.md  README.md  contributing.md  pyproject.toml
.github/workflows/: check_doc.yml  pangbank_ci.yml  python-publish.yml  rich-codex.yml
docs/: conf.py  contributing.md  index.md  installation.md  tests.md  usage.md
pangbank_cli/: collections.py  main.py  match_pangenome.py  pangenomes.py  utils.py
